--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ plugins:
   - jekyll-remote-theme
   - jemoji
 title: Tech Blog Series
-description: A compiled series of real world scenario stories from the business as usual days of a cloud success architect in latin america
+description: A compiled series of real world scenario stories from the business as usual days of a IT architect
