--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,24 @@
+title: Tech Blog Series
+description: A compiled series of real world scenario stories from the business as usual days of a IT architect
 remote_theme: pages-themes/tactile@v0.2.0
+
 plugins:
   - jekyll-remote-theme
   - jemoji
-title: Tech Blog Series
-description: A compiled series of real world scenario stories from the business as usual days of a IT architect
+  - jekyll-relative-links
+  - jekyll-readme-index
+  - jekyll-redirect-from
+
+show_dir_listing: false
+
+readme_index:
+  enabled:          true
+  remove_originals: true
+  with_frontmatter: false
+
+defaults:
+  - 
+    scope:
+      path: ""
+    values:
+      layout: default    
