config and default.html fix

--- a/_config.yml
+++ b/_config.yml
@@ -21,4 +21,9 @@ defaults:
     scope:
       path: ""
     values:
-      layout: default    
+      layout: default   
+
+exclude:
+  - CNAME
+  - Gemfile
+  - Gemfile.lock
