change blogrunner container file

--- a/cd/Containerfile
+++ b/cd/Containerfile
@@ -6,8 +6,8 @@ ENV WORKDIR="/workdir"
 ENTRYPOINT \
   cd $WORKDIR; \
   git clone $GIT_REPO; \
-  chmod -R a+rwx $WORKDIR; \
   cd `echo $GIT_REPO | sed -e 's;.*/;;g'`; \
+  bundle config set path $WORKDIR/bundle; \
   bundle install; \
   bundle exec jekyll serve -d $WORKDIR/site --host "0.0.0.0" --incremental
 
