--- a/cd/deployment.yaml
+++ b/cd/deployment.yaml
@@ -1,10 +1,10 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: blog
-  labels:
-    name: blog
----
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: blog
+#   labels:
+#     name: blog
+# ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
