review argo cd example

--- a/cd/deployment.yaml
+++ b/cd/deployment.yaml
@@ -1,15 +1,15 @@
-# apiVersion: v1
-# kind: Namespace
-# metadata:
-#   name: blog
-#   labels:
-#     name: blog
-# ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: blog
+  labels:
+    name: blog
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: blog
-  # namespace: blog
+  namespace: blog
 spec:
   replicas: 1
   selector:
@@ -57,14 +57,14 @@ spec:
                 done
                 sleep 10
               done             
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: blog
-#   namespace: blog
-# spec:
-#   ports:
-#     - port: 4000
-#   selector:
-#     app: blog
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: blog
+  namespace: blog
+spec:
+  ports:
+    - port: 4000
+  selector:
+    app: blog
