--- a/cd/deployment.yaml
+++ b/cd/deployment.yaml
@@ -25,7 +25,7 @@ spec:
           emptyDir: {}
       containers:
         - name: blogrunner
-          image: quay.io/mauriciosantiagodecastro/blogrunner
+          image: quay.io/mauriciosantiagodecastro/blogrunner:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 4000
