--- a/cicd/tekton/pipeline-run-new-example.yaml
+++ b/cicd/tekton/pipeline-run-new-example.yaml
@@ -3,7 +3,7 @@ kind: PipelineRun
 metadata:
   generateName: new-pipeline-run-
 spec:
-  serviceAccountName: 
+  # serviceAccountName: pipeline # openshift pipelines: oc adm policy add-scc-to-user privileged -z pipeline
   pipelineRef:
     name: new-pipeline
   workspaces:
@@ -18,3 +18,6 @@ spec:
     - name: registry-credentials
       secret:
         secretName: quayio-robot-credentials
+    - name: git-credentials
+      secret:
+        secretName: git-credentials        
