--- a/cicd/argo/deployment.yaml
+++ b/cicd/argo/deployment.yaml
@@ -10,7 +10,7 @@ kind: Deployment
 metadata:
   name: blog
   namespace: blog
-  app.kubernetes.io/version: "0.1.0"
+  app.kubernetes.io/version: "0322b2a.20230802233747"
 spec:
   replicas: 1
   selector:
@@ -35,7 +35,7 @@ spec:
               mountPath: /workdir
           env:
             - name: GIT_REPO
-              value: https://github.com/mauricioscastro/blog     
+              value: https://github.com/mauricioscastro/blog
         - name: md2pdf
           image: bladerunner2020/markdown-to-file
           imagePullPolicy: Always
@@ -44,20 +44,12 @@ spec:
               mountPath: &pdf_collection_base_path /usr/local/documents/mscastro
           env:
             - name: PDF_COLLECTION_BASE_PATH
-              value: *pdf_collection_base_path           
-          command: 
+              value: *pdf_collection_base_path
+          command:
             - /bin/sh
-          args: 
+          args:
             - -c
-            - |-
-              while true; do 
-                for md in `find $PDF_COLLECTION_BASE_PATH -name "*.md" -newermt "10 seconds ago" | grep -v 404 | grep -v $PDF_COLLECTION_BASE_PATH/bundle | grep -v $PDF_COLLECTION_BASE_PATH/site`; do 
-                  m2f $md pdf \
-                    footerTemplate="<div style=\"font-size: 9px; margin: 0 auto;\"> <span class="pageNumber"></span> / <span class="totalPages"></span></div>" \
-                    headerTemplate="<span/>" margin.top="0.8cm" 
-                done
-                sleep 10
-              done             
+            - "while true; do \n  for md in `find $PDF_COLLECTION_BASE_PATH -name \"*.md\" -newermt \"10 seconds ago\" | grep -v 404 | grep -v $PDF_COLLECTION_BASE_PATH/bundle | grep -v $PDF_COLLECTION_BASE_PATH/site`; do \n    m2f $md pdf \\\n      footerTemplate=\"<div style=\\\"font-size: 9px; margin: 0 auto;\\\"> <span class=\"pageNumber\"></span> / <span class=\"totalPages\"></span></div>\" \\\n      headerTemplate=\"<span/>\" margin.top=\"0.8cm\" \n  done\n  sleep 10\ndone             "
 ---
 apiVersion: v1
 kind: Service
