--- a/cicd/tekton/pipeline-new-pipeline.yaml
+++ b/cicd/tekton/pipeline-new-pipeline.yaml
@@ -47,8 +47,9 @@ spec:
             script: |-
               cd $(workspaces.output.path)
               chmod -R a+rwx .
+              bundle config set path /tmp/bundle
               bundle install
-              bundler exec jekyll build --incremental
+              bundler exec jekyll build -d /tmp/site --incremental
     #
     # test md conversion to pdf
     #                   
@@ -67,43 +68,21 @@ spec:
             image: bladerunner2020/markdown-to-file
             script: |-
               mkdir -p $(params.pdf-dest-dir)
-              mv $(workspaces.output.path)/* $(params.pdf-dest-dir)
+              cp -r $(workspaces.output.path)/* $(params.pdf-dest-dir)
               for md in `find $(params.pdf-dest-dir) -name "*.md" | grep -v 404`; do 
                 m2f $md pdf \
                   footerTemplate="<div style=\"font-size: 9px; margin: 0 auto;\"> <span class="pageNumber"></span> / <span class="totalPages"></span></div>" \
                   headerTemplate="<span/>" margin.top="0.8cm" 
               done
-              mv $(params.pdf-dest-dir)/* $(workspaces.output.path)
-          - name: check-pdf-exists
-            image: alpine
-            script: |-              
-              pdf_count=`find $(workspaces.output.path) -name  "*.pdf" | wc -l`
+              pdf_count=`find $(params.pdf-dest-dir) -name  "*.pdf" | wc -l`
               echo "number of converted pdfs: $pdf_count"
               test $pdf_count -gt 0
-    #
-    # use kaniko to push 
-    #              
-    # - name: kaniko
-    #   runAfter: 
-    #     # - add-pdf
-    #     - git-clone
-    #   taskRef:
-    #     kind: Task
-    #     name: kaniko  
-    #   workspaces:
-    #     - workspace: git-source
-    #       name: source
-    #     - workspace: registry-credentials 
-    #       name: dockerconfig
-    #   params:
-    #     - name: commit 
-    #       value: $(tasks.git-clone.results.commit)
     #
     # use podman to push 
     #        
     - name: podman
       runAfter:
-        - add-pdf   
+        - add-pdf
       workspaces:
         - workspace: git-source 
           name: output
@@ -123,7 +102,7 @@ spec:
           - name: build-and-push
             image: quay.io/podman/stable
             securityContext:
-              privileged: true                    
+              privileged: true 
             script: |-
               export REGISTRY_AUTH_FILE=$(workspaces.dockerconfig.path)/config.json
               short=`echo $(params.commit) | cut -c 1-7`
@@ -140,32 +119,36 @@ spec:
       runAfter:
         - podman
       workspaces:
-        - workspace: git-source 
-          name: output
         - workspace: git-credentials 
           name: gitssh   
       params:
         - name: version
           value: $(tasks.podman.results.image-tag)
+        - name: cd-git-repo
+          value: git@github.com:mauricioscastro/blog.git
       taskSpec:
         params:
           - name: version 
+          - name: cd-git-repo
         steps:
           - name: update-deployment
             image: alpine
             script: |-   
-              manifest=$(workspaces.output.path)/cicd/argo/deployment.yaml
-              export version=$(params.version)
-              apk --no-cache add yq git > /dev/null 2>&1
-              export GIT_SSH_COMMAND="ssh -i $(workspaces.gitssh.path)/gitkey -o IdentitiesOnly=yes -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
-              git config --global --add safe.directory $(workspaces.output.path)
+              git_repo=$(params.cd-git-repo)
+              manifest=cicd/argo/deployment.yaml
+              export VERSION=$(params.version)
+              export GIT_SSH_COMMAND="ssh -i /tmp/gitkey -o IdentitiesOnly=yes -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
+              cp $(workspaces.gitssh.path)/gitkey /tmp
+              chmod 0400 /tmp/gitkey
+              apk --no-cache add yq git openssh > /dev/null 2>&1
               git config --global user.email "tekton@openshift"
               git config --global user.name "tekton"
-              cd $(workspaces.output.path)
-              yq -i 'with(select(.kind=="Deployment" and .metadata.name=="blog"); .metadata."app.kubernetes.io/version" = strenv(version))' $manifest
+              git clone $git_repo 2> /dev/null
+              cd `echo $git_repo | sed -e 's/.git//g' -e 's;.*/;;g'`
+              yq -i 'with(select(.kind=="Deployment" and .metadata.name=="blog"); .metadata."app.kubernetes.io/version" = strenv(VERSION))' $manifest
               git add $manifest
               git commit -m "updating deployments with version $version"
-              git push origin HEAD:main
+              git push 2> /dev/null
     - name: clean
       runAfter:
         - cd-update 
