--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,14 @@ plugins:
   - jekyll-relative-links
   - jekyll-readme-index
   - jekyll-redirect-from
+  - jekyll_include_plugin
 
 show_dir_listing: false
 
 readme_index:
   enabled:          true
   remove_originals: true
-  with_frontmatter: false
+  with_frontmatter: true
 
 defaults:
   - scope:
