--- a/.github/workflows/build-jekyll.yaml
+++ b/.github/workflows/build-jekyll.yaml
@@ -5,6 +5,8 @@ on:
     branches:
       - master  # Here source code branch is `master`, it could be other branch
 
+  workflow_dispatch:
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
