--- a/.github/workflows/build-jekyll.yaml
+++ b/.github/workflows/build-jekyll.yaml
@@ -3,7 +3,7 @@ name: Build and Deploy to Github Pages
 on:
   push:
     branches:
-      - master  # Here source code branch is `master`, it could be other branch
+      - main
 
   workflow_dispatch:
 
