added single file content view

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Tech Blog Series
-description: A compiled series of real world scenario stories from the business as usual days of a IT architect
+title: Blog Series
+description: A compiled series of real (or almost real) stories from my day by life and thoughts 
 remote_theme: pages-themes/tactile@v0.2.0
 
 plugins:
