clean front matter from md

--- a/_config.yml
+++ b/_config.yml
@@ -59,5 +59,12 @@ defaults:
       path: ""
     values:
       layout: default  
-
+  #
+  # remove front matter from markdown
+  #
+  - scope:
+      path: "redhat/idp/cert+ldap/README.md"
+    values:
+      title: Tech Blog Series
+      description: A compiled series of real world scenario stories from the business as usual days of a IT architect  
     
