adjust pipe path

--- a/cicd/tekton/tasks/pipeline-blogmd.yaml
+++ b/cicd/tekton/tasks/pipeline-blogmd.yaml
@@ -12,6 +12,8 @@ spec:
     - name: pdf-dest-dir
       type: string
       default: /usr/local/documents/mscastro-blog         
+    - name: path
+      type: string
   tasks:
     #
     # clone repo with git-clone
