ignore sec files

--- a/cicd/tekton/tasks/pipeline-blogmd.yaml
+++ b/cicd/tekton/tasks/pipeline-blogmd.yaml
@@ -112,8 +112,7 @@ spec:
               privileged: true 
             script: |-
               
-              export REGISTRY_AUTH_FILE=$(workspaces.dockerconfigjson.path)/config.json
-              echo $REGISTRY_AUTH_FILE
+              export REGISTRY_AUTH_FILE=$(workspaces.dockerconfigjson.path)/.dockerconfigjson
               short=`echo $(params.commit) | cut -c 1-7`
               build_date=`date +'%Y%m%d%H%M%S'`              
               cd $(workspaces.output.path)
