--- a/cicd/argo/gitops-kustomize/overlays/dev/kustomization.yaml
+++ b/cicd/argo/gitops-kustomize/overlays/dev/kustomization.yaml
@@ -14,5 +14,5 @@ resources:
 
 images:
 - name: quay.io/telefonicadevops/blogrunner
-  newName: image-registry.openshift-image-registry.svc:5000/blogmd-dev/blogrunner
+  newName: image-registry.openshift-image-registry.svc:5000/blogmd/blogrunner
   newTag: v1.0
