--- a/cicd/argo/gitops-kustomize/overlays/dev/kustomization.yaml
+++ b/cicd/argo/gitops-kustomize/overlays/dev/kustomization.yaml
@@ -13,6 +13,6 @@ resources:
   - namespace.yaml
 
 images:
-- name: quay.io/telefonicadevops/blogrunner
-  newName: image-registry.openshift-image-registry.svc:5000/blogmd/blogrunner
-  newTag: v1.0
+- name: quay.io/telefonicadevops/blogrunner:latest
+#  newName: image-registry.openshift-image-registry.svc:5000/blogmd/blogrunner
+#  newTag: v1.0
