--- a/cicd/argo/gitops-kustomize/base/deployment.yaml
+++ b/cicd/argo/gitops-kustomize/base/deployment.yaml
@@ -20,7 +20,7 @@ spec:
           emptyDir: {}
       containers:
         - name: blogrunner
-          image: quay.io/mauriciosantiagodecastro/blogrunner:latest
+          image: quay.io/telefonicadevops/blogrunner:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 4000
@@ -29,9 +29,7 @@ spec:
               mountPath: /workdir
           env:
             - name: GIT_REPO
-              value: https://github.com/mauricioscastro/blog
-      imagePullSecrets:
-        - name: telefonicadevops-devopsbot-pull-secret
+              value: https://github.com/pecorawal/blogmd
         - name: md2pdf
           image: bladerunner2020/markdown-to-file
           imagePullPolicy: Always
