--- a/cicd/argo/gitops-kustomize/base/service.yaml
+++ b/cicd/argo/gitops-kustomize/base/service.yaml
@@ -6,7 +6,9 @@ metadata:
   namespace: blogmd
 spec:
   ports:
-    - port: 8080
+    - protocol: TCP
+      port: 80
+      targetPort:4000
   selector:
     app: blogmd
 
