--- a/cicd/argo/gitops-kustomize/base/route.yaml
+++ b/cicd/argo/gitops-kustomize/base/route.yaml
@@ -11,4 +11,8 @@ spec:
     name: blogmd
     weight: 100
   port:
-    targetPort: 8080
+    targetPort: 4000
+  tls:
+    termination: edge
+    insecureEdgeTerminationPolicy: Allow
+  wildcardPolicy: None
