--- a/cicd/argo/gitops-kustomize/base/route.yaml
+++ b/cicd/argo/gitops-kustomize/base/route.yaml
@@ -6,15 +6,9 @@ metadata:
   labels:
     app: blogmd
 spec:
-  host:
-    blogmd-blogmd.apps.ko6r5840.eastus.aroapp.io
+  subdomain: blogmd
+  tls:
+    termination: edge
   to:
     kind: Service
     name: blogmd
-    weight: 100
-  port:
-    targetPort: 4000
-  tls:
-    termination: edge
-    insecureEdgeTerminationPolicy: Allow
-  wildcardPolicy: None
