--- a/cicd/argo/gitops-kustomize/overlays/dev/kustomization.yaml
+++ b/cicd/argo/gitops-kustomize/overlays/dev/kustomization.yaml
@@ -15,5 +15,5 @@ resources:
 
 images:
 - name: quay.io/telefonicadevops/blogrunner:latest
-  newName: image-registry.openshift-image-registry.svc:5000/blogmd/blogrunner
-  newTag: latest
+#  newName: image-registry.openshift-image-registry.svc:5000/blogmd/blogrunner
+#  newTag: latest
