connfig.yml changes

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,6 @@ defaults:
   - scope:
       path: "redhat/idp/cert+ldap/README.md"
     values:
-      title: Tech Blog Series
+      title: Tech Blog Series - nueva version
       description: A compiled series of real world scenario stories from the business as usual days of a IT architect  
     
