--- a/cicd/argo/gitops-kustomize/overlays/prod/route.yaml
+++ b/cicd/argo/gitops-kustomize/overlays/prod/route.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: blogmd
 spec:
-  subdomain: blogmd-dev
+  subdomain: blogmd-prod
   tls:
     termination: edge
   to:
