--- a/cicd/argo/gitops-kustomize/overlays/prod/namespace.yaml
+++ b/cicd/argo/gitops-kustomize/overlays/prod/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: blogmd-prod1
+  name: blogmd-prod
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops  
